removing dimple from this repo since it has its own now

--- a/themes/dimple/templates/article.html
+++ b/themes/dimple/templates/article.html
@@ -44,5 +44,6 @@
   <div class="entry-content">
     {{ article.content }}
   </div><!-- /.entry-content -->
+  <a href="/archives.html">< back</a>
 </section>
 {% endblock %}
