--- a/themes/dimple/static/css/base.css
+++ b/themes/dimple/static/css/base.css
@@ -54,8 +54,10 @@ span.small-text {
 
 /* images */
 img {
+    display:block;
     width: 80%;
-    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 /* youtube */
