--- a/themes/dimple/static/css/base.css
+++ b/themes/dimple/static/css/base.css
@@ -104,3 +104,11 @@ footer {
     font-size: 0.75em;
     color: #666666;
 }
+
+/* ipynb stuff */
+.highlight, code {
+    width: 100;
+    font-size: 0.7em;
+    background-color: #f9f9f9;
+    overflow: auto;
+}
